# mpich

./: .gitignore  Makefile.am  autogen.sh  configure.ac  t.def  typemap.def  typemap_cases.def  typemap_set.def  typesig_set.def
.github/workflows/: main.yml
confdb/: aclocal_fc.m4  aclocal_subdir.m4  aclocal_subdir_hwloc.m4  aclocal_subdir_izem.m4  aclocal_subdir_mpl_etc.m4  aclocal_subdir_ofi.m4  aclocal_subdir_opa.m4  aclocal_subdir_ucx.m4
doc/: developer_guide.md
maint/: autogen_quick.pl  code-cleanup.bash  gen_binding_c.py  gen_binding_f08.py  gen_binding_f77.py  gen_binding_f90.py  subdir_config.pl
maint/local_python/: __init__.py  binding_c.py  binding_f08.py  binding_f77.py
src/binding/: mpi_standard_api.txt
src/binding/fortran/: Makefile.am  autogen.sh  configure.ac
src/binding/fortran/mpif_h/: Makefile.mk  mpi_fortimpl.h  setbot.c.in  user_proxy.c
src/binding/fortran/use_mpi/: create_f90_complex.c  create_f90_int.c  create_f90_real.c
src/env/: mpicc.bash.in  mpicc.sh.in  mpicxx.bash.in  mpicxx.sh.in
src/include/: Makefile.mk  mpi.h.in  mpi_mpich.h.in  mpichconfconst.h  mpiimpl.h  mpir_coll.h  mpir_comm.h  mpir_datatype.h  mpir_err.h  mpir_group.h  mpir_impl.h  mpir_process.h  mpir_request.h  mpir_thread.h  mpir_typerep.h  mpir_win.h
src/mpi_t/: cat_changed.c  cat_get_categories.c  cat_get_cvars.c  cat_get_index.c  cat_get_info.c  cat_get_num.c  cat_get_pvars.c  cvar_get_index.c  cvar_get_info.c  cvar_get_num.c  cvar_handle_alloc.c  cvar_handle_free.c  cvar_read.c  cvar_write.c  enum_get_info.c  enum_get_item.c  mpit_finalize.c  pvar_get_num.c  (+13 more)
(+790 files in other folders)
